<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginBottom="24sp"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_spotify"
        android:id="@+id/btn_spotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_scores"
        android:id="@+id/btn_scores"
        android:layout_below="@+id/btn_spotify"
        android:layout_alignLeft="@+id/btn_spotify"
        android:layout_alignStart="@+id/btn_spotify" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_library"
        android:id="@+id/btn_library"
        android:layout_below="@+id/btn_scores"
        android:layout_alignLeft="@+id/btn_scores"
        android:layout_alignStart="@+id/btn_scores" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_bigger"
        android:id="@+id/btn_bigger"
        android:layout_below="@+id/btn_library"
        android:layout_alignLeft="@+id/btn_library"
        android:layout_alignStart="@+id/btn_library" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_xyz"
        android:id="@+id/btn_xyz"
        android:layout_below="@+id/btn_bigger"
        android:layout_alignLeft="@+id/btn_bigger"
        android:layout_alignStart="@+id/btn_bigger" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_xyz"
        android:layout_alignLeft="@+id/btn_xyz"
        android:layout_alignStart="@+id/btn_xyz" />

</RelativeLayout>
